pe410a/czc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: czc-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: czc-frontend
  template:
    metadata:
      labels:
        app: czc-frontend
    spec:
      containers:
      - name: portfolio
        image: gallery.local:5002/czc:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: czc-frontend
spec:
  selector:
    app: czc-frontend
  ports:
  - protocol: TCP
    port: 5050
    targetPort: 80
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: czc-frontend-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - czc.brian2002.com
    secretName: czc-brian2002-tls
  rules:
  - host: czc.brian2002.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: czc-frontend
            port:
              number: 5050
